tests/algorithms/x/Java/web_programming/fetch_anime_and_play.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden1054_fetch_anime_and_play2413287111/001/Main.java:76: error: incompatible types: Object cannot be converted to Map<String,String>[]
            return ((Object)(EPISODE_DB).get(endpoint));
                    ^
Note: /tmp/TestJavaTranspiler_Algorithms_Golden1054_fetch_anime_and_play2413287111/001/Main.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error
